# J4

./: .copilotignore  .gitignore  README.md  SensitivityEP_Output.csv  cplex.opt  environment.yml  job_submission.sh  pyproject.toml  requirements.txt  run.gms  run.py  run_analysis.py  run_analysis_main.py  run_analysis_sadr.py  run_analysis_saep.py  run_model.py  scenario_params.csv  setup.md  submission_individual.sh  submit_sensitivities.sh
configs/globals/: analyses.yml  mappings.yml  plot_styles.yml
configs/plots/: MAIN_CarbonEmissionsChange.yml  MAIN_ElectrProductionChange.yml  MAIN_FuelConsumptionChange.yml  MAIN_HeatProductionChange.yml  MAIN_HeatProductionTimeseries.yml  MAIN_NPV.yml  SADR_HeatProduction.yml  SADR_NPV.yml  SAEP_HeatProduction.yml  SAEP_NPV.yml
data/: SensitivityDR_Output.csv
data/B0/: B0_scnpars.csv
data/BASE/: BASE_scnpars.csv
data/MAIN/: scenario_parameters.csv
data/NEWOUTPUT/: scenario_parameters.csv
data/SADR00/: data-entity.csv  scenario_parameters.csv
data/SADR02/: SADR02_scnpars.csv  data-entity.csv
data/SADR04/: SADR04_scnpars.csv
data/SADR06/: data-entity.csv  scenario_parameters.csv
data/SADR08/: SADR08_scnpars.csv  data-entity.csv
data/SADR10/: SADR10_scnpars.csv
data/SADR12/: SADR12_scnpars.csv
data/SADR14/: data-entity.csv  scenario_parameters.csv
data/SADR16/: data-entity.csv  scenario_parameters.csv
data/SADR18/: data-entity.csv  scenario_parameters.csv
data/SADR20/: data-entity.csv  scenario_parameters.csv
data/SAEP2018/: scenario_parameters.csv
data/SAEP2019/: SAEP2019_scnpars.csv
data/SAEP2020/: SAEP2020_scnpars.csv
data/SAEP2021/: scenario_parameters.csv
data/SAEP2022/: scenario_parameters.csv
data/SAEP2023/: scenario_parameters.csv  ts-electricity-carbon.csv
data/SAEP_base/: notes.md  scenario_parameters.csv
deprecated/: paybacktime.inc
notes/: TODO.md  _markdown-cheat-sheet.md  dh-load.md  electricity-data.md  financials.md  fuel data.md  fuel-emissions.md  fuel-prices.md  fuel-properties.md  fuels.md  main assumptions.md  md-cheat-sheet.md  others.md  portfolio.md  portfolios.md  storage-data.md  tariffs.md  taxes.md  technologies.md  technology data dh.md  technology data preparation.md  technology-specs.md
results/: DC.xlsx
scenarios/: scenarios.csv
tests/: model_pipeline_test_config.yml
(+1716 files in other folders)
