[project]
name = "J4"
version = "0.1.0"
description = "Policy effects on WHR recovery"
authors = [
	{ name = "Juan Jerez", email = "juanjerezmonsalves@gmail.com" }
]
license = {file = "LICENSE"}

requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "openpyxl",
    "matplotlib",
    "pyyaml",
    "requests",
    "gamsapi"
]
